# derive-cad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: cases.py  run_benchmarks.py
scripts/: publish.sh  setup-dev.sh  test-install.sh
skills/cad/: UPSTREAM_SHA
src/derive_cad/: __init__.py
src/derive_cad/cad/: export.py  inspect.py  render.py  runner.py  sandbox.py  script_safety.py  templates.py  validation.py
src/derive_cad/cli/: app.py  commands_cmd.py  init_cmd.py  inspect_cmd.py  open_cmd.py  passthrough.py  run_cmd.py  setup.py  snapshot_cmd.py  step_cmd.py
src/derive_cad/config/: models.py  paths.py  secrets.py  store.py  toml_io.py
src/derive_cad/llm/: brief.py  client.py  generate.py  naming.py  prompts.py  providers.py  repair_loop.py  review.py  step_parts.py
src/derive_cad/project/: workspace.py
src/derive_cad/skill/: __init__.py  paths.py  runner.py
src/derive_cad/utils/: errors.py  logging.py
tests/: cad_scripts.py  conftest.py  test_brief.py  test_cad_runner.py  test_commands_cmd.py  test_config.py  test_export.py  test_generate.py  test_naming.py  test_prompts.py  test_render.py  test_repair.py  test_repair_orchestrator.py  test_review.py  test_script_safety.py  test_secrets.py  test_setup.py  test_skill_paths.py  test_step_parts.py  test_validation.py  test_workspace.py
