[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "derive-cad"
version = "0.1.0"
description = "Text to CAD from your terminal — generate real STEP/STL/3MF/GLB files from plain-language descriptions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = [{ name = "HumfDev" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "build123d>=0.11.1,<0.12",
    "litellm>=1.83,<2",
    "keyring>=25.6,<26",
    "typer>=0.26,<0.27",
    "rich>=15.0,<16",
    "questionary>=2.1,<3",
    "pydantic>=2.9,<3",
    "tomli-w>=1.0,<2",
    "tomli>=2.0,<3; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
    "pytest-cov",
    "ruff>=0.15,<0.16",
    "mypy",
]

[project.scripts]
derivecad = "derive_cad.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/derive_cad"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: exercises the real build123d subprocess sandbox (slower).",
]
