[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcad"
version = "0.1.0"
description = "Text to CAD from your terminal — generate real STEP/STL/3MF/GLB files from plain-language descriptions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.15"
authors = [{ name = "HumfDev" }]
keywords = ["cad", "3d", "llm", "build123d", "text-to-cad"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "build123d>=0.11.1,<0.12",
    "cadpy @ file:packages/cadpy",
    "litellm>=1.83,<2",
    "playwright>=1.49,<2",
    "keyring>=25.6,<26",
    "typer>=0.26,<0.27",
    "rich>=15.0,<16",
    "questionary>=2.1,<3",
    "pydantic>=2.9,<3",
    "tomli-w>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/HumfDev/derive-cad"
Repository = "https://github.com/HumfDev/derive-cad"
Issues = "https://github.com/HumfDev/derive-cad/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
    "pytest-cov",
    "ruff>=0.15,<0.16",
    "mypy",
]

[project.scripts]
dcad = "derive_cad.cli.app:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/derive_cad"]

[tool.hatch.build.targets.wheel.force-include]
"skills/cad" = "skills/cad"
"skills/step-parts" = "skills/step-parts"
"packages/cadpy" = "packages/cadpy"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: exercises the real build123d subprocess sandbox (slower).",
]
